# Obsidian-Memory-Transformer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/design/: architecture.md
docs/performance/: optimization.md
docs/usage/: guide.md
include/: cuda_ops.cuh
include/core/attention/: flash_attention.cuh  memory_attention.cuh
include/core/ltm/: compression_gate.cuh  memory_bank.cuh
include/core/ops/: fused_ops.cuh  mma_ops.cuh
include/core/quantization/: quantizer.cuh
include/core/transformer/: titan_inspired_block.cuh
include/core/utils/: cuda_utils.cuh  tensor.cuh
python_bindings/: CMakeLists.txt  setup.py
python_bindings/ltm/: __init__.py  inference.py  model.py  trainer.py
python_bindings/src/: main.cpp
src/: cuda_ops.cu
src/core/attention/: flash_attention.cu  memory_attention.cu
src/core/ltm/: compression_gate.cu  memory_bank.cu
src/core/ops/: fused_ops.cu  mma_ops.cu
src/core/parallel/: mpi_utils.cpp  pipeline.cpp  tensor_parallel.cpp
src/core/quantization/: calibrator.cu  quantizer.cu
src/core/transformer/: titan_inspired_block.cu
src/inference/: CMakeLists.txt
src/models/: CMakeLists.txt
src/trainer/: CMakeLists.txt
tests/: CMakeLists.txt
